Mon Nov 16 19:04:54 MET 1998 Sven Neumann <sven@gimp.org>

	* app/gimage_cmds.[ch]
	* app/internal_procs.c: new function to get the drawable a
	floating selection is attached to (for the gap plug-in)

Sun Nov 15 19:36:02 MET 1998 Sven Neumann <sven@gimp.org>

	* app/floating_sel_cmds.[ch]
	* app/internal_procs.c: export floating-selection functions
	to the PDB (needed for the XJT-plug-in by Wolfgang Hofer)

Sun Nov 15 17:54:18 MET 1998 Sven Neumann <sven@gimp.org>

	* plugins/script-fu/scripts/waves-anim.scm: cosmetic fix

	* app/app_procs.c: cosmetic fix

	* app/gimage.h
	* app/gimage_cmds.[ch]
	* app/gimpimage.[ch]
	* layer_cmds.[ch]
	* layers_dialog.c: first set of changes to integrate GAP
	(Gimp Animation Plugin written by Wolfgang Hofer)
	new functions: gimp_layer_[get|set]_linked
	               gimp_image_raise_layer_to_top
		       gimp_image_lower_layer_to_bottom		 

Sun Nov 15 15:05:22 MET 1998 Sven Neumann <sven@gimp.org>

	* app/gdisplay.h
	* app/interface.c: fixed my latest changes

1998-11-15  Tuomas Kuosmanen  <tigert@gimp.org>

	* gimp.spec: changed wilbur to wilber in RPM/*.xpm,
	updated gimp.spec accordingly. Can someone like Marc
	check that I didnt break anything, I tried to be very 
	gentle :)
	

Sun Nov 15 13:09:43 CET 1998 Marc Lehmann <pcg@goof.com>

	* app/blend.c: allow the use of DIVIDE_MODE.

Sat Nov 14 23:16:55 GMT 1998  Austin Donnelly  <austin@greenend.org.uk>

	* app/gimpimage.h
	* app/gimpimageP.h
	* app/gimpimage.c
	* app/gimage_cmds.c
	* app/file_new_dialog.c
	* app/info_window.c
	* libgimp/gimp.h
	* libgimp/gimpimage.c
	* plug-ins/newsprint/newsprint.c
	* plug-ins/tiff/tiff.c: gimp_image_{get,set}_resolution() calls
	now get and set both X and Y resolutions.  Gimp image struct now
	has two resolution fields, one for each direction.  I've updated
	the two plugins which used the info (TIFF and newsprint).

Sat Nov 14 20:15:46 CET 1998 Marc Lehmann <pcg@goof.com>

	* plug-ins/script-fu/scripts/*: removed the image